--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,7 +15,7 @@
 
 
 	<script>
-		var socket = io.connect(window.location.hostname, {port: 3000});
+		var socket = io.connect(window.location.hostname, {port: <%=process.env.PORT%> || 3000});
 	</script>
 </head>
 
