use client's name to generate serverComponent urls rather than direct user input

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 			<fieldset>
 				<legend>Compare Server Component Results</legend>
 				<div class="control-group">
-					<div class="controls">
+<!-- 					<div class="controls">
 						<input type="text" class="input-large" name="scUrl1" placeholder="First Server Component URL">
 					</div>
 				</div>
@@ -12,6 +12,12 @@
 				<div class="control-group">
 					<div class="controls">
 						<input type="text" class="input-large" name="scUrl2" placeholder="Second Server Component URL">
+					</div>
+				</div> -->
+
+				<div class="control-group">
+					<div class="controls">
+						<input type="text" class="input-large" name="clientName" placeholder="Client Name">
 					</div>
 				</div>
 
