--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,8 +10,10 @@
 	<!-- Le styles -->
 	<link href="/css/bootstrap/bootstrap.css" rel="stylesheet">
 	<link href="/css/style.css" rel="stylesheet">
+	<link href="http://twitter.github.com/bootstrap/assets/js/google-code-prettify/prettify.css" rel="stylesheet">
 	<script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
+	<script src="http://twitter.github.io/bootstrap/assets/js/google-code-prettify/prettify.js"></script>
 
 
 	<script>
