Add copy buttons

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -43,6 +43,7 @@
 	<% } %>
 
 	<script type="text/javascript" src="/js/main.js"></script>
+	<script type="text/javascript" src="/js/ZeroClipboard.min.js"></script>
 	<script type="text/javascript" src="/js/bootstrap.min.js"></script>
 
 	<script type="text/template" id="rowTemplate">
