--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,56 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-	<meta charset="utf-8">
-	<title>Migration Checker</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="">
-	<meta name="author" content="">
+  <meta charset="utf-8">
+  <title>Migration Checker</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-	<!-- Le styles -->
-	<link href="/css/bootstrap/bootstrap.css" rel="stylesheet">
-	<link href="/css/style.css" rel="stylesheet">
-	<link href="http://twitter.github.com/bootstrap/assets/js/google-code-prettify/prettify.css" rel="stylesheet">
-	<script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
-	<script src="/socket.io/socket.io.js"></script>
-	<script src="http://twitter.github.io/bootstrap/assets/js/google-code-prettify/prettify.js"></script>
+  <!-- Le styles -->
+  <link href="/css/bootstrap/bootstrap.css" rel="stylesheet">
+  <link href="/css/style.css" rel="stylesheet">
+  <link href="http://cdnjs.cloudflare.com/ajax/libs/prettify/r224/prettify.css" type="text/css">
+  <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/prettify/r224/prettify.js" type="text/javascript"></script>
 
 
-	<script>
-		var socket = io.connect(window.location.hostname, {port: <%=process.env.PORT%> || 3000});
-	</script>
+  <script>
+    var socket = io.connect(window.location.hostname, {port: <%=process.env.PORT%> || 3000});
+  </script>
 </head>
 
 <body>
-	<div class="navbar navbar-inverse navbar-fixed-top">
-		<div class="navbar-inner">
-			<div class="container">
-				<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</a>
+  <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container">
+        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </a>
 
-				<div id="cont"></div>
+        <div id="cont"></div>
 
-				<a class="brand" href="/">Migration Check</a>
+        <a class="brand" href="/">Migration Check</a>
 
-			</div>
-		</div>
-	</div> 
-	<% if(typeof body!="undefined") { %>
-		<%- body %>
-	<% } %>
+      </div>
+    </div>
+  </div> 
+  <% if(typeof body!="undefined") { %>
+    <%- body %>
+  <% } %>
 
-	<script type="text/javascript" src="/js/main.js"></script>
-	<script type="text/javascript" src="/js/ZeroClipboard.min.js"></script>
-	<script type="text/javascript" src="/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="/js/main.js"></script>
+  <script type="text/javascript" src="/js/ZeroClipboard.min.js"></script>
+  <script type="text/javascript" src="/js/bootstrap.min.js"></script>
 
-	<script type="text/template" id="rowTemplate">
-		<tr id="{0}">
-			<td>{1}</td>
-			<td><a href="{2}">{2}</a></td>
-		</tr>
-	</script>
+  <script type="text/template" id="rowTemplate">
+    <tr id="{0}">
+      <td>{1}</td>
+      <td><a href="{2}">{2}</a></td>
+    </tr>
+  </script>
 </body>
 </html>
